# cmake-template-x

./: .gitignore  .gitmodules  CMakeLists.txt  CTemplateConfig.h.in  Licence.txt  License.txt  README.md  commit.sh  configure.sh  configure_and_build.sh  create-release.sh  myProjectConfig.h.in  run-test.sh
example/: CMakeLists.txt  build.sh  main.cpp  run.sh
include/CTemplate/: CTemplate.hpp  CTemplateConfig.hpp  optionHandler.hpp  utils.hpp
include/Sdlk/: Sdlk.hpp
include/myProject/: myProject.hpp
release/: info.txt
src/: CMakeLists.txt  CTemplate.cpp  Sdlk.cpp  myProject.cpp  optionHandler.cpp  utils.cpp
tests/: CMakeLists.txt  add-test.cpp  substract-test.cpp  test.cpp
